# Background-Subtraction-Library

./: AdaptiveMedianBGS.cpp  AdaptiveMedianBGS.hpp  BGS.sln  BGS.vcproj  Bgs.hpp  BgsParams.hpp  CMakeLists.txt  Eigenbackground.cpp  Eigenbackground.hpp  GrimsonGMM.cpp  GrimsonGMM.hpp  Image.cpp  Image.hpp  MeanBGS.cpp  MeanBGS.hpp  PratiMediodBGS.cpp  PratiMediodBGS.hpp  README.md  WrenGA.cpp  WrenGA.hpp  ZivkovicAGMM.cpp  ZivkovicAGMM.hpp  create_params_wrapper.hpp  main.cpp  pybgs.pyx  pybgs_test.py  setup.py
